<resources>
    <string name="app_name">ProTim</string>
    <string name="buttonLogIn">Войти</string>
    <string name="buttonChangePassword"><u>Изменить пароль</u></string>
    <string name="buttonSignIn"><u>Зарегистрироваться</u></string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="LogIn">Вход</string>
    <string name="go_back">GO BACK</string>
    <string name="Registration">Регистрация</string>
    <string name="Surname">Фамилия</string>
    <string name="Name">Имя</string>
    <string name="PhoneNumber">Телефон</string>
    <string name="Email">Электронная почта</string>
    <string name="buttonRegister">Зарегистрироваться</string>
    <string name="terms_and_conditions">
    Нажимая кнопку «Зарегистрироваться», Вы соглашаетесь с
    <u>Публичной офертой</u> и
    <u>Политикой обработки персональных данных</u>
</string>
    <string name="buttonLogInUnderlined"><u>Войти</u></string>
    <string name="PasswordChange">Изменение пароля</string>
    <string name="buttonCancel">Отменить</string>
    <string name="buttonSend">Отправить</string>
    <string name="image_description">лого Протим</string>
    <string name="text_change_password">На указанную почту Вам будет отправлено письмо с инструкцией для изменения пароля.</string>
    <string name="Okay">Ок</string>
    <string name="letter_is_sent_to">Письмо отправлено на Ekaterina@mail.ru</string>
    <string name="ChangePasswordLogIn">Изменение пароля и вход</string>
    <string name="Home">Главная</string>
    <string name="Search">Поиск</string>
    <string name="Courses">Курсы</string>
    <string name="Favorites">Избранное</string>
    <string name="Profile">Профиль</string>
    <string name="slider_image">Изображение слайдера</string>
    <string name="Notifications">Уведомления</string>
    <string name="Actual_courses">Актуальные курсы</string>
    <string name="New_projects">Новые проекты</string>
    <string name="project_image">Изображение проекта</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="like_project">Лайкнуть проект</string>
    <string name="Popular_projects">Популярные проекты</string>
    <string name="enrollCourse">Записаться на курс</string>
    <string name="CourseName">Название курса</string>
    <string name="Format">Формат</string>
    <string name="Price">Стоимость</string>
    <string name="Duration">Продолжительность</string>
    <string name="Stack">Что освоите</string>
    <string name="Who_for">Для кого</string>
    <string name="Popular">Популярное</string>
    <string name="clear_search">Очистить</string>
    <string name="search_icon">Поиск</string>
    <string name="search_hint">Название проекта</string>
    <string name="rated_page_title">Оценили</string>
    <string name="page_title">Название страницы</string>
    <string name="notification_page_title">Уведомления</string>
    <string name="Moove">Перейти</string>
    <string name="You_save_favorite">Вы сохранили проект
        \n в “Избранное”</string>
    <string name="buttonApply">Применить</string>
    <string name="filters_page_title">Фильтры</string>
    <string name="Edit_profile">Редактировать профиль</string>
    <string name="Settings">Настройки</string>
    <string name="LogOut">Выйти</string>
    <string name="settings_page_title">Настройки</string>
    <string name="choose_male">Пол</string>
    <string name="buttonSave">Сохранить</string>
    <string name="edit_profile_page_title">Редактировать профиль</string>
    <string name="Share">Поделиться</string>
    <string name="programm_page_title">Программа</string>
    <string name="lesson_number">Номер урока</string>
    <string name="Next_lesson">Следующий урок</string>
    <string name="Searching_job">Ищу работу</string>
    <string name="Searching_internal">Ищу стажировку</string>
    <string name="Confidentiality">Конфиденциальность</string>
    <string name="Hide_birthday">Скрыть дату рождения</string>
    <string name="Public_profile">Публичный профиль</string>
    <string name="Watch_all">Смотреть все</string>
    <string name="Selections">Подборки</string>
    <string name="All_projects">Все проекты</string>
    <string name="favorites">Избранное</string>
    <string name="buttonCreate">Создать</string>
    <string name="SelectionName">Название подборки</string>
    <string name="SelectionDescription">Описание</string>
    <string name="SelectionCreating">Создание подборки</string>
    <string name="selection_title">Название подборки</string>
    <string name="selections_all_title">Все подборки</string>
    <string name="Add_selection">Добавить подборку</string>
    <string name="SelectionEditing">Редактирование</string>
    <string name="buttonEdit">Сохранить изменения</string>
    <string name="Delete_selection">"Удалить подборку "</string>
</resources>