<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/register_page"
    tools:context=".RegisterPage">

    <!-- TopAppBar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registration"
            android:layout_gravity="center"
            style="@style/TitleLarge" />
    </androidx.appcompat.widget.Toolbar>

    <!-- ScrollView с отступом сверху -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- Registration Block -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <!-- Поле для ввода Фамилии -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSurname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Surname"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Поле для ввода Имени -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    style="@style/FilledBoxEndIconTint"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Поле для ввода Телефона -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PhoneNumber"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Поле для ввода Почты -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Кнопка -->
            <Button
                android:id="@+id/loginButton"
                style="@style/ButtonTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonRegister"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/termsAndConditionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/terms_and_conditions"
                android:gravity="center"/>

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonLogInUnderlined"
                android:textColor="@color/active_field"
                android:textStyle="bold"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="12dp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>