<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/course_details_page"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/dot_inactive">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:text="@string/CourseName"
            android:textStyle="bold"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="16dp"/>

        <!-- Информационные блоки -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corners_project"
                android:backgroundTint="@color/white"
                android:padding="12dp">
            <TextView
                android:id="@+id/block1Title"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:text="@string/Format"/>

            <TextView
                android:id="@+id/block1Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/gray_text"
                android:text="Описание блока 1"/>
        </LinearLayout>

        <!-- Второй блок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_corners_project"
            android:backgroundTint="@color/white"
            android:padding="12dp">

            <TextView
                android:id="@+id/Price"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:text="@string/Price"/>

            <TextView
                android:id="@+id/block2Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/gray_text"
                android:text="Описание блока 2"/>
        </LinearLayout>

        <!-- Третий блок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_corners_project"
            android:backgroundTint="@color/white"
            android:padding="12dp">

            <TextView
                android:id="@+id/Duration"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:text="@string/Duration"/>

            <TextView
                android:id="@+id/block3Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/gray_text"
                android:text="Описание блока 3"/>
        </LinearLayout>

        <!-- Четвертый блок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_corners_project"
            android:backgroundTint="@color/white"
            android:padding="12dp">

            <TextView
                android:id="@+id/who_for"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:text="@string/Who_for"/>

            <TextView
                android:id="@+id/block4Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/gray_text"
                android:text="Описание блока 4"/>
        </LinearLayout>

        <!-- Пятый блок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_corners_project"
            android:backgroundTint="@color/white"
            android:padding="12dp">

            <TextView
                android:id="@+id/Stack"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:text="@string/Stack"/>

            <TextView
                android:id="@+id/block5Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/gray_text"
                android:text="Описание блока 5"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

<Button
    android:id="@+id/enrollButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="6dp"
    android:text="@string/enrollCourse"
    style="@style/ButtonTextStyle" />
</FrameLayout>
